--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 source("scripts/analysis_script_pathologial.R")
 ```
 
-```{r plot_path, message=FALSE, warning=FALSE}
+```{r plot_path, message=FALSE, warning=FALSE, fig.width=14}
 p_alpha
 p_beta
 p_genus
@@ -26,7 +26,7 @@ p_genus
 source("scripts/analysis_script_therapeutic.R")
 ```
 
-```{r plot_ther, message=FALSE, warning=FALSE}
+```{r plot_ther, message=FALSE, warning=FALSE, fig.width=14}
 t_alpha
 t_beta
 t_GBM
