--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,9 @@ library(patchwork)
 
 
 ```{r plot_path, message=FALSE, warning=FALSE, fig.width=16, fig.height=10}
-(p_alpha + p_beta)/p_genus + plot_layout(guides = 'collect') + plot_annotation(tag_levels = "i")
+(p_alpha + p_beta + plot_layout(widths = c(3, 2)))/p_genus + 
+  plot_layout(guides = 'collect') + 
+  plot_annotation(tag_levels = "i")
 ```
 
 # Therapeutic arm 
@@ -33,7 +35,10 @@ source("scripts/analysis_script_therapeutic.R")
 ```
 
 ```{r plot_ther, message=FALSE, warning=FALSE, fig.width=16, fig.height=10}
-((t_alpha | t_beta)/(t_GBM)) + plot_layout(guides = 'collect') + plot_annotation(tag_levels = "i")
+(t_alpha + t_beta + plot_layout(widths = c(3, 2))) /t_GBM + 
+  plot_layout(guides = 'collect') + 
+  plot_annotation(tag_levels = "i")
+
 
 # 
 # t_alpha
